<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/SW_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SW_edit_text_label"
        app:layout_constraintBottom_toTopOf="@+id/SW_editText"
        app:layout_constraintStart_toStartOf="@+id/SW_editText" />

    <TextView
        android:id="@+id/CW_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CW_edit_text_label"
        app:layout_constraintBottom_toTopOf="@+id/CW_editText"
        app:layout_constraintStart_toStartOf="@+id/CW_editText" />

    <EditText
        android:id="@+id/CW_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CW_edit_text_default_value"
        app:layout_constraintStart_toStartOf="@+id/SW_editText"
        app:layout_constraintTop_toBottomOf="@+id/SW_editText" />

    <EditText
        android:id="@+id/SW_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/SW_edit_text_default_value"
        app:layout_constraintStart_toStartOf="@+id/read_data_once_button"
        app:layout_constraintTop_toBottomOf="@+id/read_data_once_button" />

    <TextView
        android:id="@+id/cycle_read_indication_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_read_off_label_text"
        app:layout_constraintEnd_toEndOf="@+id/cycle_read_data_button"
        app:layout_constraintTop_toBottomOf="@+id/cycle_read_data_button" />

    <Button
        android:id="@+id/write_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/write_data_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/CW_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CW_editText"
        app:layout_constraintTop_toTopOf="@+id/CW_editText" />

    <Button
        android:id="@+id/read_data_once_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/read_data_once_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cycle_read_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/cycle_read_data_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>